allow to delete mp list

--- a/templates/mp/details_row.part.html
+++ b/templates/mp/details_row.part.html
@@ -9,7 +9,7 @@
         {% endif %}
     {% endif %}">
     <td>
-        <input type="checkbox" name="check" value={{topic.pk}} />
+        <input name="items" type="checkbox" value="{{ topic.pk }}" />
     </td>
     <td>
         <span class="{% if topic.is_locked %}forum-entry-locked{% endif %}">
