--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -26,7 +26,7 @@ $sprite2x: sprite-map("sprite@2x/*.png");
  * Colors
  */
 $blue: #084561;
-$orange: #ff8c00;
+$orange: #F8AD32;
 $header-hover: #396a81;
 $helpful: #e9f9dc;
 
