--- a/templates/forum/includes/topic_row.part.html
+++ b/templates/forum/includes/topic_row.part.html
@@ -27,7 +27,7 @@
                 <span class="topic-subtitle">{{ topic.subtitle }}</span>
             </a>
             <p class="topic-members">
-                Créé par
+                <span class="topic-members-label">Créé par</span>
                 <em>
                     {% include "misc/member_item.part.html" with member=topic.author %}
                 </em>
