--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -38,7 +38,7 @@
                         {% endspaceless %}</a>
 
                         <p class="topic-members">
-                            Participants :
+                            <span class="topic-members-label">Participants :</span>
                             <em>
                                 {% include "misc/member_item.part.html" with member=topic.author avatar=True %}
                             </em>{% spaceless %}
