Clean useless links in breadcrumbs

--- a/templates/forum/cat_details.html
+++ b/templates/forum/cat_details.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="javascript:;">{{ category.title }}</a></li>
+    <li class="current">{{ category.title }}</li>
 {% endblock %}
 
 {% block content %}
