--- a/templates/forum/new.html
+++ b/templates/forum/new.html
@@ -13,7 +13,7 @@
 {% block breadcrumb %}
     <li><a href="{{ forum.category.get_absolute_url }}">{{ forum.category.title }}</a></li>
     <li><a href="{{ forum.get_absolute_url }}">{{ forum.title }}</a></li>
-    <li class="current"><a href="javascript:;">Nouveau sujet</a></li>
+    <li class="current">Nouveau sujet</li>
 {% endblock %}
 
 {% block content %}
