--- a/templates/forum/edit_post.html
+++ b/templates/forum/edit_post.html
@@ -14,7 +14,7 @@
     <li><a href="{{ post.topic.forum.category.get_absolute_url }}">{{ post.topic.forum.category.title }}</a></li>
     <li><a href="{{ post.topic.forum.get_absolute_url }}">{{ post.topic.forum.title }}</a></li>
     <li><a href="{{ post.topic.get_absolute_url }}">{{ post.topic.title }}</a></li>
-    <li class="current"><a href="javascript:;">Éditer un message</a></li>
+    <li class="current">Éditer un message</li>
 {% endblock %}
 
 {% block content %}
