Some template path fix

--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -9,9 +9,9 @@
 
 
 
-{% block sidebar_actions %}
+{% block sidebar_blocs %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3><span class="wide">Filtres</span></h3>
+        <h3>Filtres</h3>
         <ul>
             <li><a href="{% url "zds.member.views.tutorials" %}">Tous</a></li>
             <li><a href="{% url "zds.member.views.tutorials" %}?type=public">Publics</a></li>
